# truth-serum-debate

./: .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  CONTRIBUTING.md  LICENSE  PUBLISH_CHECKLIST.md  README.md  SMOKE_TEST_REPORT.md  THEORY.md  pyproject.toml  requirements.txt  run_demo.py
application/: ECON_ESSAY.md  SAFETY_ESSAY.md
data/: questions.jsonl
docs/: CORPORATE_MGMT_ANGLE.md  POSITIONING.md  PROJECT_ASSESSMENT.md
experiments/: BASELINE_BENCHMARK.md  SUMMARY.md  benchmark.py  benchmark_results.json  full_stack.py  run_benchmark.py  test_benchmark.py  test_properties.py
experiments/ambig_alpha_meu/: REPORT.md  alpha_meu.py  compare_vs_bts.py  test_alpha_meu.py
experiments/baselines/: __init__.py  du_debate.py  majority_vote.py  moa_lite.py  self_consistency.py  self_moa.py  test_du_debate.py  test_majority_vote.py  test_moa_lite.py  test_self_consistency.py  test_self_moa.py  test_vanilla_debate.py  test_weighted_confidence.py  vanilla_debate.py  weighted_confidence.py
experiments/contract_holmstrom_teams/: REPORT.md  compare_to_bts.py  comparison_output.txt  pytest_output.txt  team_contract.py  test_team_contract.py
experiments/mechdesign_agv/: REPORT.md  agv.py  compare_bts.py  test_agv.py
experiments/negative_loss_aversion/: README.md  demo_loss_aversion.py
experiments/negative_results/: THREE_FAILURES.md
experiments/orgecon_garicano/: REPORT.md  __init__.py  garicano.py  test_garicano.py
notebooks/: 01_demo.ipynb
scripts/: init_repo.sh
src/: __init__.py  bts.py  debate.py  eval.py
tests/: test_bts.py
(+27 files in other folders)
