[project]
name = "truth-serum-debate"
version = "0.1.0"
description = "Bayesian Truth Serum scoring for LLM debate as scalable oversight"
requires-python = ">=3.11"
authors = [{name = "Liu Su", email = "liusully@gmail.com"}]
license = {text = "MIT"}

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "hypothesis>=6",
]

[tool.ruff]
line-length = 100
